--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
           <h3 class="titulo">IRON MAIDEN - ROCK IN RIO 2019</h3>
           <p class="descricao">Apresentação do Iron Maiden no Rock in Rio 2019.</p>
           <div class="botoes">
-            <button role="button" class="botao">
+            <button onclick=" window.open('https://youtu.be/QowJeguTEeQ','_blank')" role="button" class="botao">
               <i class="fas fa-play"></i>
-              ASSISTIR AGORA
+              ASSISTIR NO YOUTUBE
             </button>
             <button role="button" class="botao">
               <i class="fab fa-gratipay"></i>
-              FAVORITO
+              MARCAR COMO FAVORITO
             </button>
           </div>
         </div>
-        <div class="container">
+        <div class="show">
           <iframe src="https://www.youtube.com/embed/QowJeguTEeQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
