adicionados links do cabeçalho

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <body>
     <header>
       <div class="container">
-        <h2 class="logo">METALFLIX</h2>
+        <h2 class="logo">British Metal</h2>
         <nav>
-          <a href="#">Death</a>
-          <a href="#">Heavy</a>
-          <a href="#">Power</a>
-          <a href="#">Thrash</a>
+          <a href="#black-sabbath">Black Sabbath</a>
+          <a href="#iron-maiden">Iron Maiden</a>
+          <a href="#judas-priest">Judas Priest</a>
+          <a href="#ozzy-osborne">Ozzy Osborne</a>
         </nav>
       </div>
     </header>
@@ -30,10 +30,6 @@
           <h3 class="titulo">IRON MAIDEN - ROCK IN RIO 2019</h3>
           <p class="descricao">Apresentação do Iron Maiden no Rock in Rio 2019.</p>
           <div class="botoes">
-            <button onclick=" window.open('https://youtu.be/QowJeguTEeQ','_blank')" role="button" class="botao">
-              <i class="fas fa-play"></i>
-              ASSISTIR NO YOUTUBE
-            </button>
             <button role="button" class="botao">
               <i class="fab fa-gratipay"></i>
               MARCAR COMO FAVORITO
@@ -46,6 +42,8 @@
       </div>
     </main>
     <div class="carrossel-metal">
+      <h3 id="black-sabbath" class="titulo">BLACK SABBATH</h3>
+      <h3 id="iron-maiden" class="titulo">IRON MAIDEN</h3>
       <div class="owl-carousel owl-theme">
         <div class="item-video" data-merge="3"><a class="owl-video" href="https://www.youtube.com/watch?v=Z3SvkefKslg"></a></div>
         <div class="item-video" data-merge="1"><a class="owl-video" href="https://www.youtube.com/watch?v=BXPxPV-CSBk"></a></div>
@@ -56,6 +54,8 @@
         <div class="item-video" data-merge="1"><a class="owl-video" href="https://www.youtube.com/watch?v=jXMxwkecHJ0"></a></div>
         <div class="item-video" data-merge="2"><a class="owl-video" href="https://www.youtube.com/watch?v=rVgZ9LBbo4A"></a></div>
       </div>
+      <h3 id="judas-priest" class="titulo">JUDAS PRIEST</h3>
+      <h3 id="ozzy-osborne" class="titulo">OZZY OSBORNE</h3>
     </div>
     <script src="https://kit.fontawesome.com/bf48c19784.js" crossorigin="anonymous"></script>
     <script src="js/jquery.min.js"></script>
