estilização dos carrosseis

--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
   <body>
     <header>
       <div class="container">
-        <h2 class="logo">British Metal</h2>
+        <h2 class="logo">METALFLIX</h2>
         <nav>
           <a href="#black-sabbath">Black Sabbath</a>
           <a href="#iron-maiden">Iron Maiden</a>
-          <a href="#judas-priest">Judas Priest</a>
-          <a href="#ozzy-osborne">Ozzy Osborne</a>
         </nav>
       </div>
     </header>
@@ -31,8 +29,12 @@
           <p class="descricao">Apresentação do Iron Maiden no Rock in Rio 2019.</p>
           <div class="botoes">
             <button role="button" class="botao">
+              <i class="fas fa-play"></i>
+              ASSISTIR AGORA
+            </button>
+            <button role="button" class="botao">
               <i class="fab fa-gratipay"></i>
-              MARCAR COMO FAVORITO
+              FAVORITO
             </button>
           </div>
         </div>
@@ -43,19 +45,61 @@
     </main>
     <div class="carrossel-metal">
       <h3 id="black-sabbath" class="titulo">BLACK SABBATH</h3>
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <a class="item" href="https://www.youtube.com/watch?v=D9yawWUIit0" target="_blank">
+            <img src="http://img.youtube.com/vi/D9yawWUIit0/0.jpg" alt="">
+          </a>
+        </div>
+        <div class="item">
+          <a class="item" href="https://www.youtube.com/watch?v=L6U5-CSc_7c" target="_blank">
+            <img src="http://img.youtube.com/vi/L6U5-CSc_7c/2.jpg" alt="">
+          </a>
+        </div>
+        <div class="item">
+          <a class="item" href="https://www.youtube.com/watch?v=XTeB0LBWgz0" target="_blank">
+            <img src="http://img.youtube.com/vi/XTeB0LBWgz0/0.jpg" alt="">
+          </a>
+        </div>
+        <div class="item">
+          <a class="item" href="https://www.youtube.com/watch?v=PqidfZiFYvE" target="_blank">
+            <img src="http://img.youtube.com/vi/PqidfZiFYvE/0.jpg" alt="">
+          </a>
+        </div>
+        <div class="item">
+          <a class="item" href="https://www.youtube.com/watch?v=-RPnNGJLj584" target="_blank">
+            <img src="http://img.youtube.com/vi/RPnNGJLj584/0.jpg" alt="">
+          </a>
+        </div>
+      </div>
       <h3 id="iron-maiden" class="titulo">IRON MAIDEN</h3>
       <div class="owl-carousel owl-theme">
-        <div class="item-video" data-merge="3"><a class="owl-video" href="https://www.youtube.com/watch?v=Z3SvkefKslg"></a></div>
-        <div class="item-video" data-merge="1"><a class="owl-video" href="https://www.youtube.com/watch?v=BXPxPV-CSBk"></a></div>
-        <div class="item-video" data-merge="2"><a class="owl-video" href="https://www.youtube.com/watch?v=IG5VNDZGYck"></a></div>
-        <div class="item-video" data-merge="1"><a class="owl-video" href="https://www.youtube.com/watch?v=qVcKRF5y7s0"></a></div>
-        <div class="item-video" data-merge="2"><a class="owl-video" href="https://www.youtube.com/watch?v=-AchE4Ua4zE"></a></div>
-        <div class="item-video" data-merge="3"><a class="owl-video" href="https://www.youtube.com/watch?v=Lr2N6SluA64"></a></div>
-        <div class="item-video" data-merge="1"><a class="owl-video" href="https://www.youtube.com/watch?v=jXMxwkecHJ0"></a></div>
-        <div class="item-video" data-merge="2"><a class="owl-video" href="https://www.youtube.com/watch?v=rVgZ9LBbo4A"></a></div>
+        <div class="item">
+          <a class="item" href="https://www.youtube.com/watch?v=Z3SvkefKslg" target="_blank">
+            <img src="http://img.youtube.com/vi/Z3SvkefKslg/0.jpg" alt="">
+          </a>
+        </div>
+        <div class="item">
+          <a class="item" href="https://www.youtube.com/watch?v=BXPxPV-CSBk" target="_blank">
+            <img src="http://img.youtube.com/vi/BXPxPV-CSBk/2.jpg" alt="">
+          </a>
+        </div>
+        <div class="item">
+          <a class="item" href="https://www.youtube.com/watch?v=IG5VNDZGYck" target="_blank">
+            <img src="http://img.youtube.com/vi/IG5VNDZGYck/0.jpg" alt="">
+          </a>
+        </div>
+        <div class="item">
+          <a class="item" href="https://www.youtube.com/watch?v=qVcKRF5y7s0" target="_blank">
+            <img src="http://img.youtube.com/vi/qVcKRF5y7s0/0.jpg" alt="">
+          </a>
+        </div>
+        <div class="item">
+          <a class="item" href="https://www.youtube.com/watch?v=-Lr2N6SluA64" target="_blank">
+            <img src="http://img.youtube.com/vi/Lr2N6SluA64/0.jpg" alt="">
+          </a>
+        </div>
       </div>
-      <h3 id="judas-priest" class="titulo">JUDAS PRIEST</h3>
-      <h3 id="ozzy-osborne" class="titulo">OZZY OSBORNE</h3>
     </div>
     <script src="https://kit.fontawesome.com/bf48c19784.js" crossorigin="anonymous"></script>
     <script src="js/jquery.min.js"></script>
